# mcp-server-everything-wrong

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: publish.yaml
compose/: docker-compose.yaml
src/mcp_server_everything_wrong/: __init__.py  __main__.py  server.py
