[project]
name = "mcp-server-everything-wrong"
version = "0.2.0"
description = "Show case common MCP server security concerns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "mcp[server]>=1.23.0",
    "pydantic",
    "asyncio"
]

[project.scripts]
mcp-server-everything-wrong = "mcp_server_everything_wrong:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pyright>=1.1.389", "ruff>=0.7.3"]
